[gd_scene load_steps=11 format=3 uid="uid://csq2hy81hoqoh"]

[ext_resource type="Script" uid="uid://dx4bcpymmfg7r" path="res://scripts/enemy.gd" id="1_slebx"]
[ext_resource type="Texture2D" uid="uid://dddpdja1q0y4r" path="res://icon.svg" id="2_2b04r"]
[ext_resource type="Script" uid="uid://bpoy5qpx0bvro" path="res://scripts/enemy_movement.gd" id="3_iasw0"]
[ext_resource type="Texture2D" uid="uid://cjh1tbbh0jtw5" path="res://scene/sprites/cone.png" id="3_wujgv"]
[ext_resource type="PackedScene" uid="uid://7wxtqrjwssae" path="res://scene/components/gravity_component.tscn" id="5_2b04r"]
[ext_resource type="PackedScene" uid="uid://bqnegl0kr5b1r" path="res://scene/components/unique_id_component.tscn" id="6_3yqyl"]
[ext_resource type="PackedScene" uid="uid://2sc717stb6mh" path="res://scene/components/enemy_vision_component.tscn" id="6_iasw0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vixnb"]
size = Vector2(121.06238, 126.50024)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_u1fn3"]
points = PackedVector2Array(100.00002, 3, 96.00002, 42.000008, 74.000015, 86.000015, -24.00001, -8.000003, 72.000015, -104.00002, 91.00002, -77.00002)

[sub_resource type="CircleShape2D" id="CircleShape2D_3yqyl"]
radius = 77.0065

[node name="Enemy" type="Node2D" node_paths=PackedStringArray("gravity_component", "enemy_vision_component", "movement", "unique_id_component", "characterBody", "viewcone", "blowUpArea", "enemyTimer", "damageTimer")]
script = ExtResource("1_slebx")
gravity_component = NodePath("GravityComponent")
enemy_vision_component = NodePath("enemy_vision_component")
movement = NodePath("EnemyMovement")
unique_id_component = NodePath("unique_id_component")
characterBody = NodePath("CharacterBody")
viewcone = NodePath("CharacterBody/CollisionShape2D/Sprite2D/Viewcone")
blowUpArea = NodePath("CharacterBody/CollisionShape2D/BlowUpArea")
enemyTimer = NodePath("EnemyTimer")
damageTimer = NodePath("DamageTimer")

[node name="CharacterBody" type="CharacterBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody"]
position = Vector2(1.1920929e-07, 0)
scale = Vector2(0.12267116, 0.3199988)
shape = SubResource("RectangleShape2D_vixnb")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody/CollisionShape2D"]
texture = ExtResource("2_2b04r")

[node name="Viewcone" type="Area2D" parent="CharacterBody/CollisionShape2D/Sprite2D"]
position = Vector2(-24.455624, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody/CollisionShape2D/Sprite2D/Viewcone"]
position = Vector2(301.6194, -21.87508)
scale = Vector2(8.151874, 3.1250112)
shape = SubResource("ConvexPolygonShape2D_u1fn3")

[node name="StepCast" type="RayCast2D" parent="CharacterBody/CollisionShape2D/Sprite2D"]
position = Vector2(65.215004, 46.875175)
scale = Vector2(8.151875, 3.1250114)
target_position = Vector2(9.000001, 0)
hit_from_inside = true

[node name="VisionCast" type="RayCast2D" parent="CharacterBody/CollisionShape2D/Sprite2D"]
position = Vector2(81.51873, -46.875164)
scale = Vector2(8.151873, 3.125011)
collision_mask = 7

[node name="Sprite2D2" type="Sprite2D" parent="CharacterBody/CollisionShape2D/Sprite2D"]
texture_filter = 1
position = Vector2(595.08685, -46.875175)
scale = Vector2(8.151874, 3.1250112)
texture = ExtResource("3_wujgv")

[node name="BlowUpArea" type="Area2D" parent="CharacterBody/CollisionShape2D"]
position = Vector2(-9.717792e-07, 0)
scale = Vector2(8.151875, 3.1250114)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody/CollisionShape2D/BlowUpArea"]
shape = SubResource("CircleShape2D_3yqyl")

[node name="EnemyMovement" type="Node" parent="." node_paths=PackedStringArray("characterBody", "enemySprite", "enemy_vision_component")]
script = ExtResource("3_iasw0")
characterBody = NodePath("../CharacterBody")
enemySprite = NodePath("../CharacterBody/CollisionShape2D/Sprite2D")
moveSpeed = 40.0
enemy_vision_component = NodePath("../enemy_vision_component")

[node name="GravityComponent" parent="." instance=ExtResource("5_2b04r")]

[node name="enemy_vision_component" parent="." node_paths=PackedStringArray("stepRaycast", "visionRaycast", "enemySprite") instance=ExtResource("6_iasw0")]
stepRaycast = NodePath("../CharacterBody/CollisionShape2D/Sprite2D/StepCast")
visionRaycast = NodePath("../CharacterBody/CollisionShape2D/Sprite2D/VisionCast")
enemySprite = NodePath("../CharacterBody/CollisionShape2D/Sprite2D")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DamageTimer" type="Timer" parent="."]

[node name="unique_id_component" parent="." instance=ExtResource("6_3yqyl")]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
